--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,18 @@
 }
 
 .logo {
-  height: 6em;
+  height: 4em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.logo.linkedin:hover {
+  filter: drop-shadow(0 0 2em #0b66c3aa);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.logo.github:hover {
+  filter: drop-shadow(0 0 2em #712e99aa);
 }
-
+/* 
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -31,7 +31,7 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 2em;
@@ -40,9 +40,3 @@
 .read-the-docs {
   color: #888;
 }
-
-/* body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  scroll-behavior: smooth;
-} */
