--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,12 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.5em;
   line-height: 1.1;
 }
 
 button {
+  margin: 1em;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -47,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #6495ff;
 }
 button:focus,
 button:focus-visible {
