--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,22 @@
 .read-the-docs {
   color: #888;
 }
+
+/* EMAIL HOVER ======================================================================================== */
+.logo.email .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.logo.email:hover .tooltiptext {
+  visibility: visible;
+}
