carousel more styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+/* Light and Dark Mode: https://www.geeksforgeeks.org/theming-and-dark-mode-with-react-hooks/ */
+/* App-specific layout, container styles, and UI-specific rules */
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .logo {
@@ -17,21 +22,6 @@
 .logo.github:hover {
   filter: drop-shadow(0 0 2em #712e99aa);
 }
-/* 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
 
 .card {
   padding: 2em;
