--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  overflow-x: hidden;
   overflow-y: auto;
+  position: relative;
+  z-index: 0;
   
   background-color: rgb(176, 232, 246);
 }
@@ -23,6 +24,9 @@
 }
 .logo.github:hover {
   filter: drop-shadow(0 0 2em #712e99aa);
+}
+.logo.tableau:hover {
+  filter: drop-shadow(0 0 2em #0a0c6faa);
 }
 
 .card {
