--- a/src/components/components_css/Carousel.css
+++ b/src/components/components_css/Carousel.css
@@ -40,7 +40,13 @@
     cursor: pointer;
     position: absolute;
     top: 50%;
-    /* transform: translateY(-50%); */
+    transform: translateY(-50%);
+  }
+
+  .custom-arrow:hover {
+    background-color: black;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
   }
 
   .next-arrow {
