--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
 
 h1, h2, h3, h4 {
