--- a/src/index.css
+++ b/src/index.css
@@ -12,20 +12,19 @@
 
   margin: 0;
   padding: 0;
-  position: relative;
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #111451;
 }
 
 body {
@@ -47,7 +46,7 @@ h1 {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #111451;
   }
   button {
     background-color: #f9f9f9;
